<resources>
    <string name="app_name">FavoritApp</string>

    <string name="tituloPlaceHolder">Título de Prueba</string>
    <string name="descripcionPlaceHolder">Esta es una descripción de prueba para verificar cómo se ve el texto, sin necesidad de recurrir a un lórem ipsum, jsjs salu2, firma x.</string>

    <string name="btnVolver">Volver</string>
    <string name="btnGuardar">Guardar</string>
    <string name="btnEliminar">Eliminar</string>
    <string name="btnCancelar">Cancelar</string>

    <string name="login_txtEmail_hint">Digite el email.</string>
    <string name="login_txtClave_hint">Digite la contraseña.</string>
    <string name="login_btnAcceder_text">Acceder</string>
    <string name="login_btnAcceder_vacioTitulo">Campos vacíos</string>
    <string name="login_btnAcceder_vacioMensaje">Digite el correo y la constraseña</string>
    <string name="login_btnAcceder_errorTitulo">Error</string>
    <string name="login_btnAcceder_errorMensaje">El correo y la contraseña no son correctos</string>
    <string name="login_btnRegistrar_text">Registrese</string>

    <string name="recyclerview_maestro">Digite el nombre del sitio o tipo de sitio</string>

    <string name="registrar_titulo">Nuevo sitio</string>
    <string name="registrar_txtNombre">Digite el nombre del sitio</string>
    <string name="registrar_txtDescripcion">Digite la descripción del sitio</string>
    <string name="registrar_spnTipo">Seleccione el tipo de sitio</string>
    <string name="registrar_txtLatitud">Digite o ubique la latitud del sitio</string>
    <string name="registrar_txtLongitud">Digite o ubique la longitud del sitio</string>
    <string name="registrar_bdExitoso">Se ha guardado el registro correctamente.</string>
    <string name="registrar_bdFallo">Ha ocurrido un error al intentar guardar el registro.</string>

    <string name="main_tvCabecera">FavoritApp</string>
    <string name="main_tvMenuPrincipal">Menú Principal</string>
    <string name="main_btnMapa">Mapa</string>
    <string name="main_btnFavoritos">Favoritos</string>
    <string name="main_btnCerrarSesion">Cerrar Sesión</string>

    <string name="registro_usuario_titulo">Registro de Usuario</string>
    <string name="registro_usuario_txtNombres">Digite los nombres del usuario</string>
    <string name="registro_usuario_txtApellidos">Digite los apellidos del usuario</string>
    <string name="registro_usuario_txtEmail">Digite el email del usuario</string>
    <string name="registro_usuario_txtClave">Digite la contraseña del usuario</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="web_client">817973665613-vsup6p39as7pvqdfrqrhhnlanjh02q9u.apps.googleusercontent.com</string>
</resources>